--- a/index.html
+++ b/index.html
@@ -9,14 +9,31 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
     <style>
-        *{
-            background-color: #F4F7FF;
-        }
+
     </style>
 </head>
 
-<body class="">
-<h1>Hello world</h1>
+<body class="bg-[#F4F7FF] min-h-screen">
+    <section class="max-w-[90%] mx-auto">
+
+        <header class="py-5">
+            <nav class="flex justify-between p-4 bg-white rounded-lg">
+                <div class="flex gap-2 items-center">
+                    <img src="assets/logo.png" alt="Dev Board Logo">
+                    <h1 class="text-3xl">Dev<span class="font-bold">Board</span></h1>
+                </div>
+                <div class="flex gap-5 items-center">
+                    <div class="flex gap-3 items-center bg-[#F4F7FF] p-4 rounded-full">
+                        <img src="assets/checkbox.png" alt="">
+                        <h2 class="text-xl font-bold">23</h2>
+                    </div>
+                    <button class="p-4 bg-[#F4F7FF] rounded-full"><img src="assets/theme-btn.png" alt=""></button>
+                </div>
+            </nav>
+        </header>
+
+
+    </section>
 </body>
 
 </html>
