--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body class="bg-[#F4F7FF] min-h-screen">
     <section class="max-w-[90%] mx-auto">
 
-        <header class="py-5">
-            <nav class="flex justify-between p-4 bg-white rounded-lg">
+        <header class="bg-white p-5 sticky top-0 z-50 mb-4">
+            <nav class="flex justify-between rounded-lg ">
                 <div class="flex gap-2 items-center">
                     <img src="assets/logo.png" alt="Dev Board Logo">
                     <h1 class="text-3xl">Dev<span class="font-bold">Board</span></h1>
@@ -25,7 +25,7 @@
                 <div class="flex gap-5 items-center">
                     <div class="flex gap-3 items-center bg-[#F4F7FF] p-4 rounded-full">
                         <img src="assets/checkbox.png" alt="">
-                        <h2 class="text-xl font-bold">23</h2>
+                        <h2 id="completed-tasks" class="text-xl font-bold">23</h2>
                     </div>
                     <button class="p-4 bg-[#F4F7FF] rounded-full"><img src="assets/theme-btn.png" alt=""></button>
                 </div>
@@ -42,7 +42,7 @@
                         <img src="assets/checkbox.png" alt="">
                         <div>
                             <p class="font-semibold text-gray-500">Task Assigned</p>
-                            <h2 class="text-xl font-bold">05</h2>
+                            <h2 id="total-tasks" class="text-xl font-bold">06</h2>
                         </div>
                     </div>
                     <div class="flex-grow flex justify-center gap-5 p-5 items-center bg-gradient-to-r from-[#3752FD] [#6C7FFA] to-[#9BA8F8] rounded-lg">
@@ -58,7 +58,8 @@
                     </div>
                 </div>
 
-                <div class="bg-[#F4F7FF] p-4 rounded-lg space-y-5">
+                <!-- Task 1 -->
+                <div class="card bg-[#F4F7FF] p-4 rounded-lg space-y-5">
                     <span class="p-4 bg-white rounded text-gray-600 inline-block">ShopEase</span>
                     <h2 class="text-2xl font-semibold">Add Dark Mode </h2>
                     <p class="p-4  bg-white rounded text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
@@ -67,11 +68,12 @@
                         <p class="font-semibold text-gray-600"><span class="text-gray-500">Deadline</span> <br>
                         21 March 2025
                         </p>
-                        <button class="btn btn-primary bg-[#3752FD] border-none">Complete</button>
+                        <button id="btn-task-1" class="btn btn-primary bg-[#3752FD] border-none">Complete</button>
                     </div>
                 </div>
 
-                <div class="bg-[#F4F7FF] p-4 rounded-lg space-y-5">
+                <!-- Task 2 -->
+                <div class="card bg-[#F4F7FF] p-4 rounded-lg space-y-5">
                     <span class="p-4 bg-white rounded text-gray-600 inline-block">ShopEase</span>
                     <h2 class="text-2xl font-semibold"> Optimize  Home page  </h2>
                     <p class="p-4  bg-white rounded text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
@@ -80,11 +82,12 @@
                         <p class="font-semibold text-gray-600"><span class="text-gray-500">Deadline</span> <br>
                         21 March 2025
                         </p>
-                        <button class="btn btn-primary bg-[#3752FD] border-none">Complete</button>
+                        <button id="btn-task-2" class="btn btn-primary bg-[#3752FD] border-none">Complete</button>
                     </div>
                 </div>
 
-                <div class="bg-[#F4F7FF] p-4 rounded-lg space-y-5">
+                <!-- Task 3 -->
+                <div class="card bg-[#F4F7FF] p-4 rounded-lg space-y-5">
                     <span class="p-4 bg-white rounded text-gray-600 inline-block">ShopEase</span>
                     <h2 class="text-2xl font-semibold">Add new emoji 🤲 </h2>
                     <p class="p-4  bg-white rounded text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
@@ -93,10 +96,12 @@
                         <p class="font-semibold text-gray-600"><span class="text-gray-500">Deadline</span> <br>
                         21 March 2025
                         </p>
-                        <button class="btn btn-primary bg-[#3752FD] border-none">Complete</button>
+                        <button id="btn-task-3" class="btn btn-primary bg-[#3752FD] border-none">Complete</button>
                     </div>
                 </div>
-                <div class="bg-[#F4F7FF] p-4 rounded-lg space-y-5">
+
+                <!-- Task 4 -->
+                <div class="card bg-[#F4F7FF] p-4 rounded-lg space-y-5">
                     <span class="p-4 bg-white rounded text-gray-600 inline-block">ShopEase</span>
                     <h2 class="text-2xl font-semibold">Integrate OpenAI API  </h2>
                     <p class="p-4  bg-white rounded text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
@@ -105,10 +110,12 @@
                         <p class="font-semibold text-gray-600"><span class="text-gray-500">Deadline</span> <br>
                         21 March 2025
                         </p>
-                        <button class="btn btn-primary bg-[#3752FD] border-none">Complete</button>
+                        <button id="btn-task-4" class="btn btn-primary bg-[#3752FD] border-none">Complete</button>
                     </div>
                 </div>
-                <div class="bg-[#F4F7FF] p-4 rounded-lg space-y-5">
+
+                <!-- Task 5 -->
+                <div class="card bg-[#F4F7FF] p-4 rounded-lg space-y-5">
                     <span class="p-4 bg-white rounded text-gray-600 inline-block">ShopEase</span>
                     <h2 class="text-2xl font-semibold">Improve Job searching </h2>
                     <p class="p-4  bg-white rounded text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
@@ -117,10 +124,12 @@
                         <p class="font-semibold text-gray-600"><span class="text-gray-500">Deadline</span> <br>
                         21 March 2025
                         </p>
-                        <button class="btn btn-primary bg-[#3752FD] border-none">Complete</button>
+                        <button id="btn-task-5" class="btn btn-primary bg-[#3752FD] border-none">Complete</button>
                     </div>
                 </div>
-                <div class="bg-[#F4F7FF] p-4 rounded-lg space-y-5">
+
+                <!-- Task 6 -->
+                <div class="card bg-[#F4F7FF] p-4 rounded-lg space-y-5">
                     <span class="p-4 bg-white rounded text-gray-600 inline-block">ShopEase</span>
                     <h2 class="text-2xl font-semibold">Fix Mobile Button Issue </h2>
                     <p class="p-4  bg-white rounded text-gray-500">Debug using Chrome DevTools, check for overlapping elements, and ensure onClick works properly and ensure onClick works properly</p>
@@ -129,7 +138,7 @@
                         <p class="font-semibold text-gray-600"><span class="text-gray-500">Deadline</span> <br>
                         21 March 2025
                         </p>
-                        <button class="btn btn-primary bg-[#3752FD] border-none">Complete</button>
+                        <button id="btn-task-6" class="btn btn-primary bg-[#3752FD] border-none">Complete</button>
                     </div>
                 </div>
 
@@ -142,11 +151,16 @@
                     <button class="btn btn-primary bg-[#3752FD] border-none">Clear History</button>    
                 </div>
 
+                <div id="activities-container">
+
+                </div>
             </div>
         </section>
 
 
     </section>
-</body>
 
+    <script src="utilities/utilities.js"></script>
+    <script src="scripts/cards.js"></script>
+</body>
 </html>
