--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                     <div class="flex items-center gap-4 p-4 bg-[#F4F7FF] rounded-lg">
                         <img src="assets/calender.png" alt="">
                         <div>
-                            <p class="font-semibold text-gray-500">Wed</p>
-                            <h2 class="text-xl font-bold">03/01/2025</h2>
+                            <p id="today" class="font-semibold text-gray-500"></p>
+                            <h2 id="today-date" class="text-xl font-bold"></h2>
                         </div>
                     </div>
                 </div>
