--- a/index.html
+++ b/index.html
@@ -26,18 +26,19 @@
                     <img src="assets/logo.png" alt="Dev Board Logo">
                     <h1 class="text-3xl">Dev<span class="font-bold">Board</span></h1>
                 </div>
-                <div class="flex gap-5 items-center">
+                <div id="completion-container" class="flex gap-5 items-center">
                     <div class="flex gap-3 items-center bg-[#F4F7FF] p-4 rounded-full">
                         <img src="assets/checkbox.png" alt="">
                         <h2 id="completed-tasks" class="text-xl font-bold">23</h2>
                     </div>
                     <button class="p-4 bg-[#F4F7FF] rounded-full"><img src="assets/theme-btn.png" alt=""></button>
                 </div>
+                <button id="back-to-desk" class="btn btn-primary hidden">Back To Desk</button>
             </nav>
         </header>
 
         <!-- Cards section -->
-        <section class="flex-col lg:flex-row flex gap-4">
+        <section id="tasks-section" class="flex-col lg:flex-row flex gap-4">
             <!-- Grid layout -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 bg-white p-3">
 
@@ -49,7 +50,7 @@
                             <h2 id="total-tasks" class="text-xl font-bold">06</h2>
                         </div>
                     </div>
-                    <div class="flex-grow flex justify-center gap-5 p-5 items-center bg-gradient-to-r from-[#3752FD] [#6C7FFA] to-[#9BA8F8] rounded-lg">
+                    <div id="discover-div" class="flex-grow flex justify-center gap-5 p-5 items-center bg-gradient-to-r from-[#3752FD] [#6C7FFA] to-[#9BA8F8] rounded-lg">
                         <img class="inline" src="assets/board.png" alt="">
                         <p class="text-slate-100 text-xl font-semibold">Discover Something New Today!</p>
                     </div>
@@ -161,6 +162,33 @@
             </div>
         </section>
 
+        <!-- Blogs Section-->
+         <section id="blogs-container" class="space-y-5 hidden">
+            <h1 class="text-center text-3xl font-bold mb-5">Blogs</h1>
+
+            <div class="bg-white rounded-lg ">
+                <h2 class="border-b border-dotted border-gray-400 font-semibold p-5">Question-1: What are the different ways to select an element in the DOM?</h2>
+                <p class="text-gray-500 p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, sequi ratione! Mollitia tenetur quasi quae fugit voluptas maxime, quisquam nesciunt?</p>
+            </div>
+            <div class="bg-white rounded-lg ">
+                <h2 class="border-b border-dotted border-gray-400 font-semibold p-5">Question-2: What is the difference between innerHTML, innerText, and textContent ?</h2>
+                <p class="text-gray-500 p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, sequi ratione! Mollitia tenetur quasi quae fugit voluptas maxime, quisquam nesciunt?</p>
+            </div>
+            <div class="bg-white rounded-lg ">
+                <h2 class="border-b border-dotted border-gray-400 font-semibold p-5">Question-3: What is event delegation in the DOM?</h2>
+                <p class="text-gray-500 p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, sequi ratione! Mollitia tenetur quasi quae fugit voluptas maxime, quisquam nesciunt?</p>
+            </div>
+            <div class="bg-white rounded-lg ">
+                <h2 class="border-b border-dotted border-gray-400 font-semibold p-5">Question-4: What is event bubbling in the DOM?</h2>
+                <p class="text-gray-500 p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, sequi ratione! Mollitia tenetur quasi quae fugit voluptas maxime, quisquam nesciunt?</p>
+            </div>
+            <div class="bg-white rounded-lg ">
+                <h2 class="border-b border-dotted border-gray-400 font-semibold p-5">Question-5: How do you create, add, and remove elements using JavaScript?</h2>
+                <p class="text-gray-500 p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, sequi ratione! Mollitia tenetur quasi quae fugit voluptas maxime, quisquam nesciunt?</p>
+            </div>
+           
+            
+         </section>
 
     </section>
 
