random bg colors changes has been done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <img src="assets/checkbox.png" alt="">
                         <h2 id="completed-tasks" class="text-xl font-bold">23</h2>
                     </div>
-                    <button class="p-4 bg-[#F4F7FF] rounded-full"><img src="assets/theme-btn.png" alt=""></button>
+                    <button id="change-bg-color" class="cursor-pointer p-4 bg-[#F4F7FF] rounded-full"><img src="assets/theme-btn.png" alt=""></button>
                 </div>
                 <button id="back-to-desk" class="btn btn-primary hidden">Back To Desk</button>
             </nav>
@@ -50,14 +50,13 @@
                             <h2 id="total-tasks" class="text-xl font-bold">06</h2>
                         </div>
                     </div>
-                    <div id="discover-div" class="flex-grow flex justify-center gap-5 p-5 items-center bg-gradient-to-r from-[#3752FD] [#6C7FFA] to-[#9BA8F8] rounded-lg">
+                    <div id="discover-div" class="cursor-pointer flex-grow flex justify-center gap-5 p-5 items-center bg-gradient-to-r from-[#3752FD] [#6C7FFA] to-[#9BA8F8] rounded-lg">
                         <img class="inline" src="assets/board.png" alt="">
                         <p class="text-slate-100 text-xl font-semibold">Discover Something New Today!</p>
                     </div>
                     <div class="flex items-center gap-4 p-4 bg-[#F4F7FF] rounded-lg">
                         <img src="assets/calender.png" alt="">
                         <div>
-                            <p id="today" class="font-semibold text-gray-500"></p>
                             <h2 id="today-date" class="text-xl font-bold"></h2>
                         </div>
                     </div>
